[tool.poetry]
name = "http-flask"
version = "0.1.0"
description = "HTTP Flask Calculator"
authors = ["Eclipse Thingweb <thingweb-dev@eclipse.org>"]
license = "EPL-2.0 OR W3C-20150513"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
python-dotenv = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
